--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="container">
-	<img src="img/Marvel-logo-1.png" />
+	<img src="img/marvelLogo.png" />
 	<p class="spoiler">
 		<!--Spoiler:-->
 		<span>Captain america sidekick bucky is Alive!!!</span>
