--- a/index.html
+++ b/index.html
@@ -2,23 +2,41 @@
 <html>
 <head>
 	<title>Marvel Spoilers</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/spoilerRevealer.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div class="container">
-	<img src="img/marvelLogo.png" />
-	<p class="spoiler">
-		<!--Spoiler:-->
-		<span>Captain america sidekick bucky is Alive!!!</span>
-	</p>
-	<p class="spoiler">
-		<span>Tony Stark is iron man lol...</span>
-	</p>
-	<script
-	  src="https://code.jquery.com/jquery-3.2.1.min.js"
-	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-	  crossorigin="anonymous"></script>
+		<div class="row spaceFix">
+			<div class="col-md-12">
+					<img class="img-responsive center-block" src="img/Marvel-logo-1.png" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<p class="spoiler center-block ">
+				<!--Spoiler:-->
+				<span>Captain america sidekick bucky is Alive!!!</span>
+				</p>
+			</div>
+
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<p class="spoiler center-block ">
+				<span>Tony Stark is iron man lol...</span>
+				</p>
+			</div>
+		</div>
+
+
+		</div>
 	</div>
+	<script
+	src="https://code.jquery.com/jquery-3.2.1.min.js"
+	integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+	crossorigin="anonymous"></script>
 	<script src="js/spoilerRevealer.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
