--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="row spaceFix">
 			<div class="col-md-12">
-					<img class="img-responsive center-block" src="img/Marvel-logo-1.png" />
+					<img class="img-responsive center-block" src="img/marvelLogo.png" />
 			</div>
 		</div>
 		<div class="row">
